samples/_failures_safe/1761424893_c22fd2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9dd0044c.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_9dd0044c.c:172:39: error: missing terminating " character
  172 |         case TOKEN_IDENTIFIER: printf("IDENTIFIER
      |                                       ^~~~~~~~~~~
./samples/SAFE/__tmp_9dd0044c.c:172:9: error: expected expression at end of input
  172 |         case TOKEN_IDENTIFIER: printf("IDENTIFIER
      |         ^~~~
./samples/SAFE/__tmp_9dd0044c.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9dd0044c.c:172:9: error: expected declaration or statement at end of input
